--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'stocks:search' %}" class="btn">주식 검색 페이지로 이동</a>
                 <a href="{% url 'portfolio:portfolio_list' %}" class="btn">포트폴리오 만들기</a>
+                <a href="{% url 'profile' %}" class="btn btn-secondary">프로필 설정</a>
                 <form method="POST" action="{% url 'logout' %}">
                     {% csrf_token %}
                     <button type="submit">Logout</button>
