forms.py 수정, 삭제 예정인 form은 필드 값 필수 삭제

--- a/templates/portfolio/portfolio_read.html
+++ b/templates/portfolio/portfolio_read.html
@@ -20,7 +20,7 @@
     <tbody>
         {% for stock in portfolio_stocks %}
         <tr>
-            <td>{{ stock.stock.ticker }} - {{ stock.stock.name }}</td>
+            <td>{{ stock.stock.ticker }}</td>
             <td>{{ stock.quantity }}</td>
             <td>{{ stock.purchase_price }}</td>
         </tr>
