--- a/templates/forum/post_create.html
+++ b/templates/forum/post_create.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>새 글 작성</h1>
+<div class="container mt-5">
+    <h1 class="mb-4">새 글 작성</h1>
 
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">게시글 작성</button>
-</form>
-
-
-<a href="{% url 'forum:forum_list' ticker=view.kwargs.ticker %}" class="btn btn-secondary mt-3">목록으로 돌아가기</a>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">게시글 작성</button>
+        <a href="{% url 'forum:forum_list' ticker=view.kwargs.ticker %}" class="btn btn-secondary ms-2">목록으로 돌아가기</a>
+    </form>
+</div>
 {% endblock %}
