--- a/templates/forum/post_read.html
+++ b/templates/forum/post_read.html
@@ -1,36 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ post.title }}</h1>
+<div class="container mt-5">
+    <h1>{{ post.title }}</h1>
 
-<p class="text-muted">
-    작성자: {{ post.author }} | 작성일: {{ post.created_at|date:"Y-m-d H:i" }} | 조회수: {{ post.views }}
-</p>
+    <p class="text-muted">
+        작성자: {{ post.author }} | 작성일: {{ post.created_at|date:"Y-m-d H:i" }} | 조회수: {{ post.views }}
+    </p>
 
-{% if post.image %}
+    {% if post.image %}
+        <div class="mt-3">
+            <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid">
+        </div>
+    {% endif %}
+
     <div class="mt-3">
-        <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid">
+        {{ post.content|linebreaks }}
     </div>
-{% endif %}
 
-<div class="mt-3">
-    {{ post.content|linebreaks }}
+    <div class="mt-4">
+        <a href="{% url 'forum:post_update' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-primary">수정</a>
+        <a href="{% url 'forum:post_delete' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-danger ms-2">삭제</a>
+    </div>
+
+    <h2 class="mt-5">댓글</h2>
+    {% include 'forum/post_comment_list.html' with post=post comments=comments %}
+
+    <h3 class="mt-4">댓글 작성</h3>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">작성</button>
+    </form>
+
+    <a href="{% url 'forum:forum_list' ticker=post.stock_ticker.ticker %}" class="btn btn-secondary mt-3">목록으로 돌아가기</a>
 </div>
-
-<div class="mt-3">
-    <a href="{% url 'forum:post_update' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-primary">수정</a>
-    <a href="{% url 'forum:post_delete' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-danger">삭제</a>
-</div>
-
-<h2 class="mt-4">댓글</h2>
-{% include 'forum/post_comment_list.html' with post=post comments=comments %}
-
-<h3 class="mt-4">댓글 작성</h3>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">작성</button>
-</form>
-
-<a href="{% url 'forum:forum_list' ticker=post.stock_ticker.ticker %}" class="btn btn-secondary mt-3">목록으로 돌아가기</a>
 {% endblock %}
