--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,18 @@
     </header>
     <main class="container mt-4">
         {% block content %}
-            <h1>미국 주가 지수</h1>
+        <div class="container my-5">
+            <div class="text-center">
+                <h2 class="display-4 fw-bold text-primary mb-4">미국 주식 커뮤니티 Stalk</h2>
+                <p class="lead text-muted mb-5">
+                    Stalk은 미국에 상장된 주식 정보, 주식별 게시판, 나만의 포트폴리오를 만들 수 있는 기능을 제공합니다.
+                </p>
+            </div>
+        
+            <div class="text-center">
+                <h3 class="fw-semibold text-secondary">미국 주가 지수</h3>
+            </div>
+        </div>
         
             <div class="row">
                 <div class="col-md-4">
